--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 
     <header>
-        Visualizing Migration Trends From California
+        Discover why Californians are leaving the Golden State- explore the trends and numbers in our interactive visualizations
     </header>
     <div id="content">
         <div class="text-block">
@@ -119,8 +119,8 @@
                 a fascinating role-reversal to what we're used to.
             </p>
             <p>
-                Overall, California is still one of the most populous and prosperous states in the country. However, times coudl be changing. As California
-                remains expensive and more and more people, the way we see the state could change forever.
+                Overall, California is still the most populous and prosperous state in the country. However, times could be changing. As California
+                remains expensive for more and more people, the way we see the state could change forever.
             </p>
         </div>
     </div>
