--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     
 
     <header>
-        Discover why Californians are leaving the Golden State- explore the trends and numbers in our interactive visualizations
+        Discover why Californians are leaving the Golden State
+        <br>
+        <small><em>Explore the trends and numbers in our interactive visualizations</em></small>
     </header>
     <div id="content">
         <div class="text-block">
